force-app/main/default/objects/Parent__c/Parent__c.object-meta.xml
<CustomObject>
    <label>Parent</label>
    <nameField>
        <displayFormat>ID-{00000}</displayFormat>
        <label>Parent ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>