force-app/main/default/objects/Parent__c/fields/Father_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Father_Birthdate__c</fullName>
    <label>Father Birthdate</label>
    <type>Date</type>
</CustomField>