force-app/main/default/objects/Parent__c/fields/Father_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Father_Full_Name__c</fullName>
    <label>Father Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>