force-app/main/default/objects/Parent__c/fields/Father_Phone__c.field-meta.xml
<CustomField>
    <fullName>Father_Phone__c</fullName>
    <label>Father Phone</label>
    <type>Phone</type>
</CustomField>