force-app/main/default/objects/Parent__c/fields/Guardian_BirthDate__c.field-meta.xml
<CustomField>
    <fullName>Guardian_BirthDate__c</fullName>
    <label>Guardian BirthDate</label>
    <type>Date</type>
</CustomField>