force-app/main/default/objects/Parent__c/fields/Guardian_Phone__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Phone__c</fullName>
    <label>Guardian Phone</label>
    <type>Phone</type>
</CustomField>