force-app/main/default/objects/Parent__c/fields/Mother_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mother_Phone__c</fullName>
    <label>Mother Phone</label>
    <type>Phone</type>
</CustomField>