force-app/main/default/objects/Parent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Mother_Full_Name__c</columns>
    <columns>Father_Full_Name__c</columns>
    <columns>NAME</columns>
    <columns>Guardian_Email__c</columns>
    <columns>Guardian_BirthDate__c</columns>
    <columns>Guardian_Gender__c</columns>
    <columns>Guardian_Phone__c</columns>
    <columns>Guardian_Relationship__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>